[package]
name = "picoc"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Zhang"]
description = "c89 -> rv32i"
readme = "README.md"
repository = "https://github.com/jeffzh4ng/picoc089"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "riscv"]
categories = ["compilers"]

[profile.dev.package]
insta.opt-level = 3

[dependencies]
colored = "3.0.0"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
